@@ -1,0 +1,62 @@
+ADD
+ALLOW
+ALTER
+AND
+APPLY
+ASC
+AUTHORIZE
+BATCH
+BEGIN
+BY
+COLUMNFAMILY
+CREATE
+DEFAULT
+DELETE
+DESC
+DESCRIBE
+DROP
+ENTRIES
+EXECUTE
+FROM
+FULL
+GRANT
+IF
+IN
+INDEX
+INFINITY
+INSERT
+INTO
+IS
+KEYSPACE
+LIMIT
+MATERIALIZED
+MBEAN
+MBEANS
+MODIFY
+NAN
+NORECURSIVE
+NOT
+NULL
+OF
+ON
+OR
+ORDER
+PRIMARY
+RENAME
+REPLACE
+REVOKE
+SCHEMA
+SELECT
+SET
+TABLE
+TO
+TOKEN
+TRUNCATE
+UNLOGGED
+UNSET
+UPDATE
+USE
+USING
+VIEW
+WHERE
+WITH
