@@ -26,7 +26,7 @@ import org.apache.cassandra.exceptions.SyntaxException;
 public class ReservedKeywordsTest
 {
     @Test
-    public void testReservedWordsForColumns() throws Exception
+    public void testReservedWordsForColumns()
     {
         for (String reservedWord : ReservedKeywords.reservedKeywords)
         {
